--- a/dev/service.yaml
+++ b/dev/service.yaml
@@ -2,10 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: myapp-service
+  namespace: dev
 spec:
+  type: NodePort
   selector:
     app: myapp
   ports:
   - port: 8888
     protocol: TCP
     targetPort: 8888
+    nodePort: 30008
